# rust-trezor-api

./: .gitmodules  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
coins/: README.md
coins/bitcoin/: Cargo.toml
coins/bitcoin/src/: error.rs  lib.rs  main.rs  utils.rs
coins/bitcoin/src/flows/: mod.rs  sign_tx.rs
coins/ethereum/: Cargo.toml
coins/ethereum/src/: lib.rs
coins/etherium/: Cargo.toml
core/: Cargo.toml  build.rs
core/src/: error.rs  lib.rs  messages.rs
core/src/client/: bitcoin.rs  common.rs  ethereum.rs  mod.rs
core/src/protos/: mod.rs
core/src/transport/: error.rs  hid.rs  mod.rs  protocol.rs  udp.rs  webusb.rs
implementors/trezor_client/: trait.TrezorMessage.js
implementors/trezor_protos/: trait.TrezorMessage.js
protos/: Cargo.toml  build.rs
protos/src/: gen.rs  kinds.rs  lib.rs
src/: lib.rs
src/transport/: error.rs  mod.rs  udp.rs
src/trezor_client/: error.rs.html  lib.rs.html
src/trezor_protos/: gen.rs.html  kinds.rs.html  lib.rs.html
trezor_client/: all.html  enum.Model.html  fn.find_devices.html  fn.find_hid_devices.html  fn.unique.html  index.html  sidebar-items.js  struct.AvailableDevice.html  trait.TrezorMessage.html
trezor_client/client/: index.html  sidebar-items.js  struct.Trezor.html
trezor_client/error/: enum.Error.html  index.html  sidebar-items.js  type.Result.html
trezor_protos/: all.html  enum.MessageType.html  index.html  sidebar-items.js  trait.TrezorMessage.html
trezor_protos/bitcoin/: enum.AmountUnit.html  enum.DecredStakingSpendType.html  enum.InputScriptType.html  enum.OutputScriptType.html  index.html  sidebar-items.js  struct.Address.html  struct.AuthorizeCoinJoin.html  struct.GetAddress.html  struct.GetOwnershipId.html  struct.GetOwnershipProof.html  struct.GetPublicKey.html  struct.MessageSignature.html  struct.MultisigRedeemScriptType.html  struct.OwnershipId.html  struct.OwnershipProof.html  struct.PrevInput.html  struct.PrevOutput.html  struct.PrevTx.html  struct.PublicKey.html  struct.SignMessage.html  struct.SignTx.html  struct.TxAck.html  struct.TxAckInput.html  struct.TxAckOutput.html  struct.TxAckPaymentRequest.html  struct.TxAckPrevExtraData.html  struct.TxAckPrevInput.html  struct.TxAckPrevMeta.html  struct.TxAckPrevOutput.html  struct.TxInput.html  struct.TxOutput.html  struct.TxRequest.html  struct.VerifyMessage.html
trezor_protos/bootloader/: index.html  sidebar-items.js  struct.FirmwareErase.html  struct.FirmwareRequest.html  struct.FirmwareUpload.html  struct.SelfTest.html
trezor_protos/cardano/: enum.CardanoAddressType.html  enum.CardanoCertificateType.html  enum.CardanoDerivationType.html  enum.CardanoNativeScriptHashDisplayFormat.html  enum.CardanoNativeScriptType.html  enum.CardanoPoolRelayType.html  enum.CardanoTxAuxiliaryDataSupplementType.html  enum.CardanoTxSigningMode.html  enum.CardanoTxWitnessType.html  index.html  sidebar-items.js  struct.CardanoAddress.html  struct.CardanoAddressParametersType.html  struct.CardanoAssetGroup.html  struct.CardanoBlockchainPointerType.html  struct.CardanoCatalystRegistrationParametersType.html  struct.CardanoGetAddress.html  struct.CardanoGetNativeScriptHash.html  struct.CardanoGetPublicKey.html  struct.CardanoNativeScript.html  struct.CardanoNativeScriptHash.html  struct.CardanoPoolMetadataType.html  struct.CardanoPoolOwner.html  struct.CardanoPoolParametersType.html  struct.CardanoPoolRelayParameters.html  struct.CardanoPublicKey.html  struct.CardanoSignTxFinished.html  struct.CardanoSignTxInit.html  struct.CardanoToken.html  struct.CardanoTxAuxiliaryData.html  struct.CardanoTxAuxiliaryDataSupplement.html  struct.CardanoTxBodyHash.html  struct.CardanoTxCertificate.html  struct.CardanoTxCollateralInput.html  struct.CardanoTxHostAck.html  struct.CardanoTxInput.html  struct.CardanoTxItemAck.html  struct.CardanoTxMint.html  struct.CardanoTxOutput.html  struct.CardanoTxRequiredSigner.html  (+3 more)
trezor_protos/common/: index.html  sidebar-items.js  struct.ButtonAck.html  struct.ButtonRequest.html  struct.DeprecatedPassphraseStateAck.html  struct.DeprecatedPassphraseStateRequest.html  struct.Failure.html  struct.HdNodeType.html  struct.PassphraseAck.html  struct.PassphraseRequest.html  struct.PinMatrixAck.html  struct.PinMatrixRequest.html  struct.Success.html
trezor_protos/debug/: index.html  sidebar-items.js  struct.DebugLinkDecision.html  struct.DebugLinkEraseSdCard.html  struct.DebugLinkFlashErase.html  struct.DebugLinkGetState.html  struct.DebugLinkLayout.html  struct.DebugLinkLog.html  struct.DebugLinkMemory.html  struct.DebugLinkMemoryRead.html  struct.DebugLinkMemoryWrite.html  struct.DebugLinkRecordScreen.html  struct.DebugLinkReseedRandom.html  struct.DebugLinkState.html  struct.DebugLinkStop.html  struct.DebugLinkWatchLayout.html
trezor_protos/ethereum/: index.html  sidebar-items.js  struct.EthereumAddress.html  struct.EthereumGetAddress.html  struct.EthereumGetPublicKey.html  struct.EthereumMessageSignature.html  struct.EthereumPublicKey.html  (+8 more)
(+327 files in other folders)
