[package]
name = "trezor-protos"
repository = "https://github.com/ryankurte/trezor-client"
edition = "2021"
license = "MPL-2.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
prost-types = "0.10"
strum = { version = "*", features = [ "derive" ] }

[build-dependencies]
anyhow = "*"
glob = "*"
prost-build = "*"
