[package]
name = "trezor-btc"
description = "Bitcoin extensions for trezor-client"
repository = "https://github.com/ryankurte/trezor-client"
edition = "2021"
license = "MPL-2.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
anyhow = "1.0.57"
clap = { version = "*", features = [ "derive" ] }
thiserror = "*"

trezor-client = "0.1.0"
trezor-protos = "0.1.0"

unicode-normalization = "0.1.7"
bitcoin = "0.28.1"
bitcoin_hashes = "0.10.0"
bitcoin-bech32 = "0.12.1"
secp256k1 = "0.22.1"

[[bin]]
name = "trezor-btc"
path = "main.rs"
