[package]
name = "trezor-eth"
description = "Ethereum extensions for trezor-client"
repository = "https://github.com/ryankurte/trezor-client"
edition = "2021"
license = "MPL-2.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trezor-client = "*"

log = "*"
anyhow = "*"
clap = { version = "*", features = [ "derive" ] }

primitive-types = { version = "0.11.1", default-features = false, optional = true }

[[bin]]
name = "trezor-eth"
path = "main.rs"
