[package]
name = "trezor-eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trezor-client = "*"

log = "*"
anyhow = "*"
clap = { version = "*", features = [ "derive" ] }


[[bin]]
name = "trezor-eth"
path = "main.rs"
